--- a/.config/i3/config
+++ b/.config/i3/config
@@ -20,7 +20,7 @@ font pango:monospace 8
 #font pango:DejaVu Sans Mono 8
 
 #monitor setup
-exec xrandr --output DVI-1 --auto --left-of HDMI-0
+exec xrandr --output HDMI-0 --primary --mode 1920x1080 --rate 60.00 --output DVI-1 --mode 1280x1024 --rate 75.02 --left-of HDMI-0 --output DVI-0 --mode 1280x1024 --rate 75.02 --right-of HDMI-0
 
 # Start XDG autostart .desktop files using dex. See also
 # https://wiki.archlinux.org/index.php/XDG_Autostart
@@ -66,7 +66,7 @@ bindsym $mod+Return exec kitty
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec --no-startup-id dmenu_run
+bindsym $mod+s exec --no-startup-id dmenu_run
 # A more modern dmenu replacement is rofi:
 # bindcode $mod+40 exec "rofi -modi drun,run -show drun"
 # There also is i3-dmenu-desktop which only displays applications shipping a
@@ -82,6 +82,9 @@ bindsym $mod+m exec prismlauncher
 
 #filebrowsers
 bindsym $mod+t exec thunar
+
+#github
+bindsym $mod+q exec github-desktop
 
 # change focus
 bindsym $mod+j focus left
@@ -117,7 +120,7 @@ bindsym $mod+v split v
 bindsym $mod+shift+f fullscreen toggle
 
 # change container layout (stacked, tabbed, toggle split)
-bindsym $mod+s layout stacking
+bindsym $mod+d layout stacking
 bindsym $mod+w layout tabbed
 bindsym $mod+e layout toggle split
 
@@ -205,9 +208,6 @@ mode "resize" {
 bindsym $mod+r mode "resize"
 
 #gaps
-gaps inner 5
-gaps outer 1
-smart_gaps on
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
